load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "instio_lib",
    srcs = [
        "addon.go",
        "build.go",
        "generate.go",
        "main.go",
        "new.go",
        "upgrade.go",
        "utils.go",
    ],
    importpath = "github.com/DeviaVir/instio/cmd/instio",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/content",
        "//pkg/system/admin",
        "//pkg/system/api",
        "//pkg/system/api/analytics",
        "//pkg/system/db",
        "//pkg/system/tls",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "instio",
    embed = [":instio_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "instio_test",
    srcs = [
        "cli_test.go",
        "new_test.go",
    ],
    embed = [":instio_lib"],
)
