load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

filegroup(
    name = "templates",
    srcs = glob([
        "templates/*.tmpl",
    ]),
)

go_library(
    name = "instio_lib",
    srcs = [
        "addon.go",
        "build.go",
        "generate.go",
        "main.go",
        "new.go",
        "upgrade.go",
        "utils.go",
    ],
    data = [
        ":templates",
    ],
    importpath = "github.com/DeviaVir/instio/cmd/instio",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/build/bazel",
        "//pkg/content",
        "//pkg/system/admin",
        "//pkg/system/api",
        "//pkg/system/api/analytics",
        "//pkg/system/db",
        "//pkg/system/tls",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "instio",
    embed = [":instio_lib"],
    visibility = ["//visibility:public"],
    gotags = ["bazel"],
)

go_test(
    name = "instio_test",
    srcs = [
        "cli_test.go",
        "new_test.go",
    ],
    embed = [":instio_lib"],
)
