load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "manager",
    srcs = ["manager.go"],
    importpath = "github.com/DeviaVir/instio/pkg/management/manager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/management/editor",
        "//pkg/system/item",
        "@com_github_gofrs_uuid//:uuid",
    ],
)
