load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "addon",
    srcs = [
        "addon.go",
        "api.go",
        "manager.go",
    ],
    importpath = "github.com/DeviaVir/instio/pkg/system/addon",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_schema//:go_default_library",
        "@com_github_tidwall_gjson//:go_default_library",
        "@com_github_tidwall_sjson//:go_default_library",
    ],
)
