load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "addon",
    srcs = [
        "addon.go",
        "api.go",
        "manager.go",
    ],
    importpath = "github.com/DeviaVir/instio/pkg/system/addon",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/management/editor",
        "//pkg/system/db",
        "//pkg/system/item",
        "@com_github_gorilla_schema//:schema",
        "@com_github_tidwall_gjson//:gjson",
        "@com_github_tidwall_sjson//:sjson",
    ],
)
