load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "addon.go",
        "backup.go",
        "cache.go",
        "config.go",
        "content.go",
        "index.go",
        "init.go",
        "upload.go",
        "user.go",
    ],
    importpath = "github.com/DeviaVir/instio/pkg/system/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/system/admin/config",
        "//pkg/system/admin/user",
        "//pkg/system/cfg",
        "//pkg/system/item",
        "//pkg/system/search",
        "@com_github_boltdb_bolt//:bolt",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_gorilla_schema//:schema",
        "@com_github_nilslice_jwt//:jwt",
    ],
)
