load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "item",
    srcs = [
        "item.go",
        "types.go",
        "upload.go",
    ],
    importpath = "github.com/DeviaVir/instio/pkg/system/item",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/management/editor",
        "@com_github_blevesearch_bleve_v2//:bleve",
        "@com_github_blevesearch_bleve_v2//mapping",
        "@com_github_gofrs_uuid//:uuid",
        "@org_golang_x_text//transform",
        "@org_golang_x_text//unicode/norm",
    ],
)
