load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "item",
    srcs = [
        "item.go",
        "types.go",
        "upload.go",
    ],
    importpath = "github.com/DeviaVir/instio/pkg/system/item",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/management/editor",
        "@com_github_blevesearch_bleve_v2//:go_default_library",
        "@com_github_blevesearch_bleve_v2//mapping:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@org_golang_x_text//transform:go_default_library",
        "@org_golang_x_text//unicode/norm:go_default_library",
    ],
)
