load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/example/project/pkg/system/admin/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_deviavir_instio//pkg/management/editor:go_default_library"],
)
