load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/DeviaVir/instio/pkg/system/admin/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/management/editor",
        "//pkg/system/item",
    ],
)
